[package]
name = "Chain_Replica"
version = "0.1.0"
authors = ["Alex Wolski <wolski.alexander.john@gmail.com>"]
edition = "2018"

[dependencies]
prost = "0.8.0"
local-ip-address = "0.4.4"
tonic = { version= "0.5.2", features = ["tls"] }
tokio = { version= "1.11.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
zookeeper = "0.5"
futures = "0.3"

[build-dependencies]
tonic-build = "0.5.2"

# Replica binary
[[bin]]
	name = "chain_replica"
	path = "src/chain_replica.rs"