[package]
name = "Chain_Replication"
version = "0.1.0"
authors = ["Alex Wolski <wolski.alexander.john@gmail.com>"]
edition = "2018"

[dependencies]
prost = "0.8.0"
tonic = { version= "0.5.2", features = ["tls"] }
tokio = { version= "0.2.18", features = ["stream", "macros"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.5.2"

# Replica binary
[[bin]]
	name = "chain_replica"
	path = "src/chain_replica.rs"

# Client binary
[[bin]]
	name = "chain_client"
	path = "src/chain_client.rs"